--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint src --ext ts, tsx --report-unused-disable-directives --cache",
     "lint-staged": "lint-staged",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "prepare": "husky"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
@@ -16,6 +17,7 @@
     ]
   },
   "dependencies": {
+    "hamburger-react": "^2.5.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
