--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "hamburger-react": "^2.5.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
